# fft_gravity

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: tests.yml
doc/: 01_overview.md  02_fourier_fundamentals.md  03_1d_periodic.md  04_1d_dirichlet.md  05_1d_neumann.md  06_1d_isolated.md  07_convergence.md  08_performance.md  09_nd_periodic.md  10_nd_isolated.md
examples/: convergence_study.py  demo_1d.py  demo_2d.py  demo_3d.py  performance_benchmark.py
src/: __init__.py  poisson1d.py  poissonnd.py  utils.py
tests/: test_poisson1d.py  test_poissonnd.py
