[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fft_gravity"
version = "0.1.0"
description = "FFT-based solvers for 1D Poisson's equation — educational repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.14",
    "jaxlib>=0.4.14",
]
examples = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
